# django-pain

./: .bumpversion.cfg  .codecov.yml  .eslintrc.js  .gitattributes  .gitignore  .gitlab-ci.yml  .license-check-ignore  .stylelintrc  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  constraints.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  webpack.config.js
django_pain/: __init__.py  apps.py  constants.py  import_callbacks.py  ldap.py  serializers.py  settings.py  sites.py  translation.py  urls.py  utils.py  views.py
django_pain/admin/: __init__.py  admin.py  filters.py  forms.py
django_pain/card_payment_handlers/: __init__.py  common.py  csob.py
django_pain/management/: __init__.py  command_mixins.py
django_pain/migrations/: 0001_initial.py  0002_auto_20180510_0838.py  0003_auto_20180515_0905.py  0004_auto_20180605_1228.py  0005_auto_20180606_1416.py  0006_add_bankpayment_uuid.py  0007_generate_bankpayment_uuid.py  0008_fix_bankpayment_uuid.py  0009_auto_20180718_0416.py  0010_auto_20180807_0424.py  0010_verbose_names.py  0011_alter_bankpayment_account_and_state.py  0011_auto_20180809_0557.py  0012_invoice.py  0013_client.py  0014_remove_bankpayment_objective.py  0015_add_search_indexes.py  0016_unique_account_number.py  0017_bankpayment_processing_error.py  0018_update_bankpayment_processing_error.py  0019_update_django_money.py  0020_27622_card_payments.py  0021_27658_card_payments_api.py  0022_auto_20200804_1122.py  0023_paymentimporthistory.py  0024_empty_counteraccount.py  0025_bankaccount_enforce_currency.py  0026_auto_20211206_0951.py  0027_remove_bankaccount_enforce_currency.py
django_pain/models/: __init__.py  bank.py  client.py  invoices.py  symbols.py
django_pain/parsers/: __init__.py  common.py  czechslovak.py  transproc.py
django_pain/processors/: __init__.py  common.py  ignore.py  utils.py
django_pain/tests-js/: .eslintrc.js  customize_form.test.js  processor_client_field.test.js  state_colors.test.js  test_state_colors.js  (+1 more)
scripts/: migrate_payments_from_FRED.py
(+62 files in other folders)
