[metadata]
name = django-pain
version = 2.4.0rc1
author = Jan Musílek
author_email = jan.musilek@nic.cz
description = Django application for managing bank payments and invoices
long_description = file: README.rst, CHANGELOG.rst
license = GPLv3+
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Typing :: Typed

[options]
zip_safe = false
packages = find:
python_requires = ~=3.7
install_requires =
    Django >=3.2,<5
    django-money ~= 1.3
    django-app-settings ~= 0.7.1
    lxml
    django-lang-switch
    django-rest-framework
    pycsob ~= 1.0
include_package_data = true

[options.extras_require]
quality =
    doc8
    flake8
    isort
    mypy
    polint
    pydocstyle
test =
    freezegun
    testfixtures
teller =
    fred-teller ~= 0.4.0
types =
    types-freezegun
    types-pytz
    types-requests

[compile_catalog]
domain = django
directory = django_pain/locale

[npm_run]
script = build

[isort]
line_length = 120
skip_glob = */migrations/*
known_first_party = django_pain
combine_as_imports = true

[flake8]
max-line-length = 120
max-complexity = 15
exclude = */migrations/*

[pydocstyle]
match_dir = (?!migrations|\.).*
convention = google
add_ignore = D105,D106,D107,D212
add_select = D204,D213,D400,D401

[mypy]
ignore_missing_imports = true
check_untyped_defs = true

[mypy-django_pain.migrations.*]
ignore_errors = true

[doc8]
max-line-length = 120
allow-long-titles = true
